[INFRA] Build modifications.
Added two Zinc-related scripts in the `tools` folder.

- `zinc_setup.sh` - installs `zinc-0.3.13` under `$HOME/.zinc`.
- `zinc.sh` - starts / stops the Zinc server.

Modified `.travis.yml` as follows

- Set Ubuntu 14.04 image.
- Setup and start zinc before running the build.
- Teardown zinc after running the build.
- Set `-Xms256m -Xmx512m` in `MAVEN_OPTS`.

Modified the build-settings in `pom.xml` as follows.

- Set `-Xms3096m -Xms3096m` in `scalatest-maven-plugin`.
- Set `-Xms256m -Xmx512m1` in `scala-maven-plugin`.
- Set `scalaVersion` and `scalaCompatVersion` in `scala-maven-plugin`.

Also set `-XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled` in

- `scala-maven-plugin`,
- `scalatest-maven-plugin`, and
- `MAVEN_OPTS`.